Integration_des_Api_Et_Changement_des_Methodes_CRUD

--- a/GestionRestaurant/Views/Shared/_Layout.cshtml
+++ b/GestionRestaurant/Views/Shared/_Layout.cshtml
@@ -22,6 +22,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Serveurs" asp-action="Index">Serveurs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produit" asp-action="Index">Produit</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TableCmd" asp-action="Index">TableCmd</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Consommation" asp-action="Index">Consommation</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
